--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -13,7 +13,7 @@
 | 苏黎世市 / 苏黎世市区          | Stadt Zürich                                                 | City of Zurich                                                                     |
 | 市县                    | Gemeinde                                                     | Community                                                                          |
 | 居委会 （*2023年6月12日起撤销*） | Kreisbüro                                                    | District office                                                                    |
-| 人口登记处                 | Personenmeldeamt&#xA;Einwohnerkontrolle&#xA;Einwohnerdienste | Residents' Registration Office&#xA;Residents' registration&#xA;Residents' Services |
+| 人口登记办公室               | Personenmeldeamt&#xA;Einwohnerkontrolle&#xA;Einwohnerdienste | Residents' Registration Office&#xA;Residents' registration&#xA;Residents' Services |
 | 住址申报                  | anmelden                                                     | register                                                                           |
 | 住址变更                  | Addresseänderung                                             | Change of residential address                                                      |
 | 住址注销                  | abmelden                                                     | de-register                                                                        |
@@ -30,20 +30,20 @@
 ^
 
 > [warning] **背景介绍**
-> 2023年6月12日起，苏黎世市区12个区的7个居委会重组为3个人口登记处（详见：[苏黎世市政府发布的相关消息](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)），分别为：
+> 2023年6月12日起，苏黎世市区12个区的7个居委会重组为3个人口登记办公室（详见：[苏黎世市政府发布的相关消息](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)），分别为：
 >
-> * **南城人口登记处（Personenmeldeamt Zürich Süd**）
+> * **南城人口登记办公室（Personenmeldeamt Zürich Süd**）
 >   **地址：Stadthausquai 17, 8001 Zürich（市政厅**）
 >   网站：[Personenmeldeamt Zürich Süd](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb01.html)
-> * 北城人口登记处（Personenmeldeamt Zürich Nord）
+> * 北城人口登记办公室（Personenmeldeamt Zürich Nord）
 >   地址：Hofwiesenstrasse 370, 8050 Zürich（Oerlikon火车站）
 >   网站：[Personenmeldeamt Zürich Nord](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb11.html)
-> * 西城人口登记处（Personenmeldeamt Zürich West）
+> * 西城人口登记办公室（Personenmeldeamt Zürich West）
 >   地址：Hohlstrasse 35, 8004 Zürich（Helvetiaplatz）
 >   网站：[Personenmeldeamt Zürich West](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb04.html)
 >
-> 3个人口登记处的联系电话均为：+41 44 412 15 15
-> 重组后，市区范围内绝大多数业务均实现免预约的全市通办，本章节已按此更新。**苏黎世郊区的人口登记处（以及各区的债务办）不受本次重组的影响**。
+> 3个人口登记办公室的联系电话均为：+41 44 412 15 15
+> 重组后，市区范围内绝大多数业务均实现免预约的全市通办，本章节已按此更新。**苏黎世郊区的人口登记办公室（以及各区的债务办）不受本次重组的影响**。
 
 ***
 
@@ -52,15 +52,15 @@
 **具体如下**：
 **1. 对于从瑞士以外的国家迁入苏黎世州的人员（即首次在苏黎世州办理申报的，所有从国内首次前来苏黎世留学的同学均属此类**）：
 
-* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/personenmeldeamtsued)**前往南城人口登记处**进行住址申报
+* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/personenmeldeamtsued)**前往南城人口登记办公室**进行住址申报
   （*必须预约，预约当天可以早一点到，但千万别迟到。如你在入境前已找到房并确认会签署租房合同，建议根据入境日期尽早预约。在9月高峰期，落地后再预约可能会排到很后的日期。Stadthaus的Information Desk工作人员英语很好，人也友好，找不到路可以请他们帮忙带路*）
-* 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记处进行住址申报，具体请参见所在区县的人口登记处官网
+* 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记办公室进行住址申报，具体请参见所在区县的人口登记办公室官网
 
 **2. 对于从瑞士其他地区迁入苏黎世州的人员**：
 
 * 迁入苏黎世前，须确保已在原居住地注销
-* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内前往市区任一人口登记处进行住址申报
-* 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记处进行住址申报
+* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内前往市区任一人口登记办公室进行住址申报
+* 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记办公室进行住址申报
 
 如不明确自己所住的地点是属于市区还是郊区的，可
 
@@ -79,7 +79,7 @@
 
 同时，还需**带足200瑞郎**用于缴费
 
-> *报到证明：40瑞郎；居留卡制证：142瑞郎；以及其它可能费用。可刷卡（MasterCard、Visa卡可以，银联卡待核实），是否可现金待核实*
+> *申报确认函：40瑞郎；居留卡制证：142瑞郎；以及其它可能费用。可刷卡（MasterCard、Visa卡可以，银联卡待核实），是否可现金待核实*
 
 ![](.topwrite/assets/image_1685710948287.png =507)
 
@@ -87,7 +87,7 @@
 
 #### **3**. **预约办理居留证**
 
-新迁入苏黎世的人员在按上述流程完成首次住址申报后，还需要现场预约办理居留证的日期和时间，此项会在人口登记处的工作人员帮助下进行。预约完成后会获得预约单，须凭预约单在规定的时间前往移民局办理居留证（见[28 居留卡办理](28移民局录指纹.md)）。
+新迁入苏黎世的人员在按上述流程完成首次住址申报后，还需要现场预约办理居留证的日期和时间，此项会在人口登记办公室的工作人员帮助下进行。预约完成后会获得预约单，须凭预约单在规定的时间前往移民局办理居留证（见[28 居留卡办理](28移民局录指纹.md)）。
 **关于时间选择**： 根据自身情况选择一个大致合适的时间即可，后期即使计划有变，亦可通过预约单上提供的网站更改时间。
 
 ^
@@ -96,15 +96,15 @@
 
 新迁入苏黎世的人员在完成住址申报后会获得一张“申报确认函”（一张含有个人信息和移民局盖章的A4纸，范例见:attachment[MBDOP.pdf]{src=".topwrite/assets/MBDOP.pdf" size="490.83 kB"}），其在大多数场合与居留证等效（但办理Postpaid电话卡等业务时仍然需要居留证）。
 凭该申报确认函即可前往银行办理瑞士本地的银行卡（见[26 瑞士银行卡](26瑞士银行卡.md)）。
-虽然相比于正式的居留证，这张确认使用频率相对较低，但是也应**妥善保管**（即使已获得正式居留证）。例如，[办理地址变更](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)时便需要用到这张报到确认函上的参考号（具体根据所选报告方式有所不同）。
+虽然相比于正式的居留证，这张确认使用频率相对较低，但是也应**妥善保管**（即使已获得正式居留证）。例如，[办理地址变更](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)时便需要用到这张申报确认函上的参考号（具体根据所选报告方式有所不同）。
 
 ^
 
 #### **5**. **住址变更申报**
 
 （本章节后期将复制/移动至[03 生活相关](03生活相关.md)部分）
-当住址发生变更时，同样需要进行申报。目前，苏黎世市区已经引入了[E-Umzug平台](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)供居民在线申报地址变更。但对于尚未接入[E-Umzug平台](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)的苏黎世郊区，仍需申报人**亲自前往**对应的人口登记处线下办理申报。
-在任何情况下，申报人都可以选择前往对应的人口登记处线下办理申报。线下办理申报应携带：护照、居留证（如有）、原有的报到证明、新的租房合同以及足量资金等。
+当住址发生变更时，同样需要进行申报。目前，苏黎世市区已经引入了[E-Umzug平台](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)供居民在线申报地址变更。但对于尚未接入[E-Umzug平台](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)的苏黎世郊区，仍需申报人**亲自前往**对应的人口登记办公室线下办理申报。
+在任何情况下，申报人都可以选择前往对应的人口登记办公室线下办理申报。线下办理申报应携带：护照、居留证（如有）、原有的申报确认函、新的租房合同以及足量资金等。
 
 ^
 
@@ -112,7 +112,7 @@
 参考：[Umzug in der Stadt](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)
 须在搬迁完成前14天至搬迁完成后14天期间
 
-* 前往市区任一人口登记处（该项业务为**全市通办**）
+* 前往市区任一人口登记办公室（该项业务为**全市通办**）
 * 或在线通过[E-Umzug平台](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)
 
 办理住址变更申报。
@@ -122,7 +122,7 @@
 **情况二：苏黎世郊区→苏黎世郊区（相同区县**）
 须在搬迁完成后14天内
 
-* 前往居住地所在区县的人口登记处
+* 前往居住地所在区县的人口登记办公室
 * 或在线通过[E-Umzug平台](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)，如适用
 
 办理地址变更申报。
@@ -130,20 +130,20 @@
 ^
 
 **情况三：苏黎世郊区→苏黎世市区**
-须在离开原居住地后14天内前往原居住地所在市县的人口登记处办理注销，再在新居住地的人口登记处申报新的住址。
-如原居住地所在市县支持[E-Umzug](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)的，也可在线办理。在线办理完成的，无须再前往市区的人口登记处线下办理申报。
+须在离开原居住地后14天内前往原居住地所在市县的人口登记办公室办理注销，再在新居住地的人口登记办公室申报新的住址。
+如原居住地所在市县支持[E-Umzug](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)的，也可在线办理。在线办理完成的，无须再前往市区的人口登记办公室线下办理申报。
 
 ^
 
 **情况四：苏黎世市区→苏黎世郊区**
-须在离开苏黎世市后14天内前往市区任一人口登记处办理注销（无须预约），再在新居住地的人口登记处申报新的住址。
-如新居住地所在市县支持[E-Umzug](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)的，也可在线办理。在线办理完成的，无须再前往新居住地的人口登记处办理申报。
+须在离开苏黎世市后14天内前往市区任一人口登记办公室办理注销（无须预约），再在新居住地的人口登记办公室申报新的住址。
+如新居住地所在市县支持[E-Umzug](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)的，也可在线办理。在线办理完成的，无须再前往新居住地的人口登记办公室办理申报。
 
 ^
 
 **情况五：苏黎世郊区→苏黎世郊区（不同区县**）
-须在离开原居住地后14天内前往原居住地所在市县的人口登记处办理注销，再在新居住地的人口登记处申报新的住址。
-如原居住地和新居住地所在市县均支持[E-Umzug](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)的，也可在线办理。在线办理完成的，无须再前往新居住地的人口登记处办理申报。
+须在离开原居住地后14天内前往原居住地所在市县的人口登记办公室办理注销，再在新居住地的人口登记办公室申报新的住址。
+如原居住地和新居住地所在市县均支持[E-Umzug](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)的，也可在线办理。在线办理完成的，无须再前往新居住地的人口登记办公室办理申报。
 
 ^
 
@@ -163,9 +163,9 @@
 根据瑞士相关法律法规，居民离开现居住市县（前往其他市县居住）的，或居民不再居住在瑞士的（如完成学业归国），均须办理住址注销。
 
 * **对于前者（离开现居住市县，前往其他市县居住的**）：
-  须在离开现居住市县后14天内前往现居住地对应的人口登记处，凭护照、居留证、原有的报到证明办理注销。如现居住地所在市县和新居住地所在市县均支持[E-Umzug](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)的，也可在线办理。
+  须在离开现居住市县后14天内前往现居住地对应的人口登记办公室，凭护照、居留证、原有的申报确认函办理注销。如现居住地所在市县和新居住地所在市县均支持[E-Umzug](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)的，也可在线办理。
 * **对于后者（离开瑞士的**）：
   （有待核实：该项业务在市区是否通办）
-  须在离开瑞士前30天内前往现居住地对应的人口登记处，凭护照、居留证、原有的报到证明办理注销，同时还需要缴纳20瑞郎的注销费用。
+  须在离开瑞士前30天内前往现居住地对应的人口登记办公室，凭护照、居留证、原有的申报确认函办理注销，同时还需要缴纳20瑞郎的注销费用。
 
-此外，短期离开瑞士的，如离开时长短于3个月的，无须进行任何操作；离开时长介于3个月至6个月之间的，原则上需要进行在线申报离境情况。离开时长超过6个月的，原则上需要前往居住地的人口登记处申报离境情况。关于苏黎世市的短期离境申报可参考：[Stadt Zürich Temporäre Landesabwesenheit](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/temporaerelandesabwesenheit.html)
+此外，短期离开瑞士的，如离开时长短于3个月的，无须进行任何操作；离开时长介于3个月至6个月之间的，原则上需要进行在线申报离境情况。离开时长超过6个月的，原则上需要前往居住地的人口登记办公室申报离境情况。关于苏黎世市的短期离境申报可参考：[Stadt Zürich Temporäre Landesabwesenheit](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/temporaerelandesabwesenheit.html)
