--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -8,7 +8,7 @@
 
 :-: Association of Chinese Students and Scholars in Zurich
 
-:-: Assoziation der Chinesischen Studierenden und Gelehrten in Zürich
+:-: Verein der Chinesischen Studierenden und Gelehrten in Zürich
 
 ^
 
