Update 00欢迎页.md, 16 云找房.md, 24找房租房.md

--- a/16 云找房.md
+++ b/16 云找房.md
@@ -8,11 +8,16 @@
 
 #### **1. 租房交易提醒**：&#x20;
 
-* 经典骗钱套路是说你还没来瑞士，之后如果你反悔不租的话他不划算，请你转定金过去让他看到谁是最真诚的租户。事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！
-* 瑞士正规租房流程是押金账户【会有一个专门开设在你名下的银行账户（房东/中介会帮你开户，需要你授权签字）来存放你交的押金，而不是放在房东或房产公司的账户里】+租金对公转账【通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户】。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明
-* Debit储蓄卡可以正式汇款/转账（Zahlung），但Prepaid卡不行。请避免将大量金额一次性充入Prepaid卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易
+* **经典骗钱套路**是在你还没到瑞士前，请你转所谓的定金（~~Security deposit~~）给他，收到定金后他为你预订保留房间和合同。事实上，瑞士的正规租房程序**没有“定金”的说法**，不需要提前交定金！**要求提前交钱的都不要信**！类似这种可疑情况都不要转账！
+* **瑞士正规租房流程**是：
 
-和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款给房东”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的资金往来纠纷。
+1. **先签合同**（该合同一般为**德语**，因为德语合同在瑞士才具备法律效力。如果是英语合同，请一定要小心谨慎，很有可能是骗子）
+2. 一般情况下，在签完合同后，房产公司会为你开设一个在你名下的**银行押金账户**，开设该账户需要你签字授权，你交的押金将存放在该账户。**你的押金不应该放在房东私人或房产公司的账户里**。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明
+3. 或者，在签完合同后，你也有可能是去签署一份**押金保险**（Mieterkautionsversicherung）并缴纳押金
+4. 你的**租金应该对公转账**，通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产中介公司或私人产权所有者）账户
+
+* 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款给房东”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的租客间资金往来纠纷
+* Debit储蓄卡可以正式汇款转账，但Prepaid/Credit卡不行。请避免将大量金额一次性充入Prepaid/Credit卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit储蓄卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易
 
 ^
 
