--- a/24找房租房.md
+++ b/24找房租房.md
@@ -88,19 +88,29 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 ^
 
-### **4**. **租房注意事项**
+### 4. **租房交易提醒**：&#x20;
+
+* **经典骗钱套路**是在你还没到瑞士前，请你转所谓的定金（~~Security deposit~~）给他，收到定金后他为你预订保留房间和合同。事实上，瑞士的正规租房程序**没有“定金”的说法**，不需要提前交定金！**要求提前交钱的都不要信**！类似这种可疑情况都不要转账！
+* **瑞士正规租房流程**是：
+
+1. **先签合同**（该合同一般为**德语**，因为德语合同在瑞士才具备法律效力。如果是英语合同，请一定要小心谨慎，很有可能是骗子）
+2. 一般情况下，在签完合同后，房产公司会为你开设一个在你名下的**银行押金账户**，开设该账户需要你签字授权，你交的押金将存放在该账户。**你的押金不应该放在房东私人或房产公司的账户里**。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明
+3. 或者，在签完合同后，你也有可能是去签署一份**押金保险**（Mieterkautionsversicherung）并缴纳押金
+4. 你的**租金应该对公转账**，通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产中介公司或私人产权所有者）账户
+
+* 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款给房东”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的租客间资金往来纠纷
+* Debit储蓄卡可以正式汇款转账，但Prepaid/Credit卡不行。请避免将大量金额一次性充入Prepaid/Credit卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit储蓄卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易
+
+^
+
+### 5. **租房注意事项**
 
 1. 所租房子是否能签署租房合同（有合同才能去人口登记办公室申报住址）
-2. 确认房费是否包含水电网暖气电视等费用，是否含有家具，**是否需要承接家具**（请务必提前约定清楚）。如果不包含家具，建议首先尝试收二手家具（微信群、本地二手平台、Facebook等），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。这边多数房间都是不带家具的，不要因为没有家具被劝退，自己置办家具也是不错的选择
-3. 瑞士正规租房流程没有定金的说法，并不要求交定金，要求提前交钱的都不要信，类似这种可疑情况都不要转账
-4. 瑞士正规租房流程是押金账户【会有一个专门开设在你名下的银行账户（房东/中介会帮你开户，需要你授权签字）来存放你交的押金，而不是放在房东或房产公司的账户里】+租金对公转账【通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户】。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明
-5. 尽量选择线下见面签合同，签完合同同时应该完成钥匙的交接（房东应该给你钥匙）。线上签合同需谨慎
-6. 签合同后，房东应该和你一同确认房间现有破损状况，记录在检查单上，并由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
-7. 和它人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账（转给房东或中介），以避免房客间不必要的资金往来纠纷
-8. 尽量选择能够长租的房子，搬家真的很麻烦。若是短租，需谨慎
-9. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26400CHF，每月要多交100CHF
-10. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大
-11. Airbnb上有一些骗子，给假链接，要求提前转账，请多加留意
+2. 确认房费是否包含水电网暖气电视等费用，是否含有家具，**是否需要付费承接家具**（请务必提前约定清楚）。如果不包含家具，建议首先尝试收二手家具（微信群、本地二手平台、Facebook等，可直接谷歌搜索**second hand furniture zurich**），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。这边多数房间都是不带家具的，不要因为没有家具被劝退，自己置办家具也是不错的选择
+3. 如果是私人房东，则尽量选择线下见面签合同，签完合同同时应该完成钥匙的交接（房东应该给你钥匙）。如果是不动产管理公司（如livit）/正规中介公司（如intermezzo）/大型住房合作社（如WOKO），则有可能线上签合同
+4. 签完合同后，房东或物业管理员应该和你一同确认房间现有破损状况，记录在检查单上，并由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
+5. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26400CHF，每月要多交100CHF
+6. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大
 
 ^
 
