--- a/紧急电话.md
+++ b/紧急电话.md
@@ -1,5 +1,11 @@
 #### **瑞士紧急电话列表**
-关于在瑞报警相关事项，可参考[ch.ch - Emergencies and danger in Switzerland](<https://www.ch.ch/en/safety-and-justice/emergencies-and-danger#emergency-numbers-in-switzerland>)。
+关于在瑞报警相关事项，如
+- 防空警报相关事项
+- 火警相关事项
+- 交通事故相关事项
+
+可参考[ch.ch - Emergencies and danger in Switzerland](<https://www.ch.ch/en/safety-and-justice/emergencies-and-danger#emergency-numbers-in-switzerland>)。
+
 | 事项 | 电话 | 备注 |
 | --- | --- | --- |
 |  警察/公安 Polizei  |  112  |   欧洲（含瑞士）通用  |
