Update 36其他相关事项.md, SUMMARY.md, 入境、过境、出境受阻时的应对.md, 对于Party扰民的应对.md, 居住证遗失后的应对.md, 意外受伤-生病时的应对.md, 护照遗失后的应对.md, 紧急电话.md, 被盗-抢-骗后的应对.md, 防诈反诈.md

--- a/36其他相关事项.md
+++ b/36其他相关事项.md
@@ -4,8 +4,14 @@
 
 #### **2. 垃圾分类**
 
-瑞士的垃圾分类比较严格，据说有垃圾警察检查垃圾是否分类正确。瑞士一般居民区周边都有不同的垃圾箱，分为纸、纸板、PET、金属和玻璃（玻璃需要根据不同颜色分类），其他垃圾必须放到Züri-sack（20 CHF 左右10个一捆，可在超市或邮局向收营员购买）。若出现垃圾分类不合规，被查到后将面临罚款。
+瑞士的垃圾分类比较严格，据说有垃圾警察检查垃圾是否分类正确。瑞士一般居民区周边都有不同的垃圾箱，分为纸、纸板、PET、金属和玻璃（玻璃需要根据不同颜色分类），其它垃圾必须放到Zürisack（20 CHF 左右10个一捆，可在超市或邮局向收营员购买）。若出现垃圾分类不合规，被查到后将面临罚款。
 关于其他垃圾回收的情况，请参照：<http://www.englishforum.ch/daily-life/197248-waste-disposal-recycling-zurich-2014-comprehensive-overview.html>
+
+> [danger] 锦涛修改建议：
+>
+> 1. Zürisack不是放其它垃圾的，Zürisack只能放可燃垃圾，请进行修改，谢谢
+> 2. “据说”的信息就不要写了，避免以讹传讹。确实有人会检查垃圾，但不是警察，而是垃圾回收部门的工作人员
+> 3. 参考链接请修改为官方链接：<https://www.stadt-zuerich.ch/ted/de/index/entsorgung_recycling.html>
 
 ^
 
@@ -14,6 +20,8 @@
 瑞士邮局是Die post，随处可见。普通包裹15-20天到国内，邮局有具体资费宣传页，可以去那里拿。邮寄10kg到国内差不多是80多瑞郎。如果在康斯坦茨买东西，往家里寄奶粉，礼物之类的东西，可以在康斯坦茨的DHL邮寄，费用会比瑞士邮局便宜些，10kg是60欧元左右。邮局都有打包材料可以买，纸箱子等并不贵，一个纸箱子约三四欧元，也可以跟药店等要。再省钱的方式就是可以在淘宝上买DHL包裹单，自己打印出来，到时候贴到箱子上直接交给DHL就可以，操作方法直接在淘宝上搜DHL包裹单就可以。Die post 和DHL一些包裹可以查到物流单号，具体可以查看官网和咨询邮局。
 
 <https://www.post.ch/de>
+
+^
 
 #### **4. Lost & Found**
 
@@ -33,3 +41,13 @@
 
 国际**硕士**研究生在完成第二个学期的修课拿到一定的学分后可以申请国际学生奖学金（<https://www.ethz.ch/students/en/studies/financial/scholarships/cost-of-living.html）>, 奖金数额往往比较可观，按照以往几年经验中国人申请到的几率非常之大；
 国际**本科生**在完成第一个学期的修课之后可申请Solidarity Fund for Foreign Students (<https://www.ethz.ch/students/en/studies/financial/solidarity-fund.html>)。
+
+> [danger] 锦涛修改建议：
+>
+> 链接和信息有待更新，特别注意：
+>
+> **International Masterstudents with a non-​swiss Bachelor or ETH degree are not eligible**.
+>
+> 请阅读现行政策并整理更新内容
+
+^
