--- a/紧急电话.md
+++ b/紧急电话.md
@@ -1,20 +1,24 @@
 #### **瑞士紧急电话列表**
+
 关于在瑞报警相关事项，如
-- 防空警报相关事项
-- 火警相关事项
-- 交通事故相关事项
 
-可参考[ch.ch - Emergencies and danger in Switzerland](<https://www.ch.ch/en/safety-and-justice/emergencies-and-danger#emergency-numbers-in-switzerland>)。
+* 防空警报相关事项
+* 火警相关事项
+* 交通事故相关事项
 
-| 事项 | 电话 | 备注 |
-| --- | --- | --- |
-|  警察/公安 Polizei  |  112  |   欧洲（含瑞士）通用  |
-|  警察/公安 Polizei  |  117  |   仅限瑞士使用  |
-|  铁路警察 &#xA; SBB-Transportpolizei | 0800 117 117 |  仅限SBB管内线路使用  |
-|  火警/消防 Feuerwehr  |  118  |  仅限瑞士使用  |
-|  急救  Sanität |  144  |  仅限瑞士使用  |
-|  生化防毒 &#xA;Toxikologisches Informationszentrum |  145 |  仅限瑞士使用 |
-|  ETH应急电话 |  内线：888；&#xA;外线：+41 44 342 11 88 |   仅限ETH内部使用  |
-|  外交部全球领事保护与服务应急热线 |  +86 10 12308 |    |
-|  驻瑞士大使馆领事保护应急热线 |  +41 31 350 1258 |    |
-|  驻苏黎世总领馆领事保护应急热线 | +41 44 2091503 |    |
+可参考[ch.ch - Emergencies and danger in Switzerland](https://www.ch.ch/en/safety-and-justice/emergencies-and-danger#emergency-numbers-in-switzerland)。
+
+| 事项                                           | 电话                              | 备注          |
+| -------------------------------------------- | ------------------------------- | ----------- |
+| 警察/公安 Polizei                                | 112                             | 欧洲（含瑞士）通用   |
+| 警察/公安 Polizei                                | 117                             | 仅限瑞士使用      |
+| 铁路警察&#xA; SBB-Transportpolizei               | 0800 117 117                    | 仅限SBB管内线路使用 |
+| 火警/消防 Feuerwehr                              | 118                             | 仅限瑞士使用      |
+| 急救  Sanität                                  | 144                             | 仅限瑞士使用      |
+| 生化防毒&#xA;Toxikologisches Informationszentrum | 145                             | 仅限瑞士使用      |
+| ETH应急电话                                      | 内线：888；&#xA;外线：+41 44 342 11 88 | 仅限ETH内部使用   |
+| 外交部全球领事保护与服务应急热线                             | +86 10 12308                    |             |
+| 驻瑞士大使馆领事保护应急热线                               | +41 31 350 1258                 |             |
+| 驻苏黎世总领馆领事保护应急热线                              | +41 44 2091503                  |             |
+
+^
