Update 02落地事项.md, 10申请签证.md, ETH相关.md

--- a/10申请签证.md
+++ b/10申请签证.md
@@ -22,13 +22,13 @@ Bachelor与Master学生在收到录取通知书后，就可以开始准备申请
 
 请详细阅读学校给出的申签材料清单 ，清单可在下方链接里查看。**请以学校官网信息作为申签指导**！
 
-> **ETH要求的申请材料（注意本科生和硕士生不一样**）<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>
+> **ETH申请材料指导清单（注意本科生和硕士生不一样**）<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>
 >
 > 这些信息由ETH与苏黎世州移民局合作编写，**满足苏黎世州移民局官方最新要求**。
 >
 > ^
 >
-> **UZH要求的申请材料**
+> **UZH申请材料指导清单**
 >
 > <https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html>
 >
@@ -76,6 +76,7 @@ Bachelor与Master学生在收到录取通知书后，就可以开始准备申请
 * 注意不要用旅游签证进入瑞士
 * 上述学校官网要求的申请材料仅针对苏黎世州的高等院校
 * 存款必须存在自己的名下，不可以存在父母名下
+* 如果你已有申根国家的居留证，则不需要申请签证，可直接入境瑞士。但在入境后，**你仍需要提交和签证申请一样的上述移民局要求的材料**（请见ETH或UZH申请材料指导清单），请直接和人口登记办公室预约（详见”落地事项-住址的申报与注销“篇），线下提交材料并申请居留许可（参考：<https://ethz.ch/de/studium/international/nach-zulassung/einreise/ohne-visum.html>）
 
 ^
 
