--- a/36其他相关事项.md
+++ b/36其他相关事项.md
@@ -9,7 +9,7 @@
 
 > [danger] 锦涛修改建议：
 >
-> 1. Zürisack不是放其它垃圾的，Zürisack只能放可燃垃圾，请进行修改，谢谢
+> 1. Zürisack不是放其它垃圾的，Zürisack**只能放**可燃垃圾，请进行修改，谢谢
 > 2. “据说”的信息就不要写了，避免以讹传讹。确实有人会检查垃圾，但不是警察，而是垃圾回收部门的工作人员
 > 3. 参考链接请修改为官方链接：<https://www.stadt-zuerich.ch/ted/de/index/entsorgung_recycling.html>
 
