Update .topwrite/assets/image_1688964916188.png, 35人身财产安全.md, 36其他相关事项.md

--- a/36其他相关事项.md
+++ b/36其他相关事项.md
@@ -4,14 +4,14 @@
 
 #### **2. 垃圾分类**
 
-瑞士的垃圾分类比较严格，据说有垃圾警察检查垃圾是否分类正确。瑞士一般居民区周边都有不同的垃圾箱，分为纸、纸板、PET、金属和玻璃（玻璃需要根据不同颜色分类），其它垃圾必须放到Zürisack（20 CHF 左右10个一捆，可在超市或邮局向收营员购买）。若出现垃圾分类不合规，被查到后将面临罚款。
-关于其他垃圾回收的情况，请参照：<http://www.englishforum.ch/daily-life/197248-waste-disposal-recycling-zurich-2014-comprehensive-overview.html>
+瑞士的垃圾分类比较严格，会有专门的工作人员检查垃圾是否分类正确。瑞士一般居民区周边都有不同的垃圾箱，分为纸、纸板、PET、金属和玻璃（玻璃需要根据不同颜色分类），其它垃圾必须放到Zürisack（20 CHF 左右10个一捆，可在超市或邮局向收营员购买）。若出现垃圾分类不合规，被查到后将面临罚款。
+关于其他垃圾回收的情况，请参照：
+<https://www.stadt-zuerich.ch/ted/de/index/entsorgung_recycling.html>
 
 > [danger] 锦涛修改建议：
 >
 > 1. Zürisack不是放其它垃圾的，Zürisack**只能放**可燃垃圾，请进行修改，谢谢
-> 2. “据说”的信息就不要写了，避免以讹传讹。确实有人会检查垃圾，但不是警察，而是垃圾回收部门的工作人员
-> 3. 参考链接请修改为官方链接：<https://www.stadt-zuerich.ch/ted/de/index/entsorgung_recycling.html>
+~~> 2. “据说”的信息就不要写了，避免以讹传讹。确实有人会检查垃圾，但不是警察，而是垃圾回收部门的工作人员> 3. 参考链接请修改为官方链接：<https://www.stadt-zuerich.ch/ted/de/index/entsorgung_recycling.html>~~
 
 ^
 
@@ -30,6 +30,7 @@
 在**学校饭堂**丢了学生卡：到饭堂平时付款处去找；超过一周，到饭堂管理处去找。
 
 在**公交车**上丢了东西：到Fundbüro Stadt去找，044 412 25 50，地址ZürichWerdmühlestrasse 10, 8001 Zürich，8:00-18:30. 或者到Easyfind网站上去找：<https://www.easyfind.ch/default.aspx?Language=en>
+如情况较为紧急，也可以尝试向同一路其他班次的公交车司机请求协助，并提供丢失物品所在的车次信息（时间、行驶方向等），司机会互相交流确认车上是否有遗失物品
 
 在**火车**上丢了东西：第一时间去<https://www.sbb.ch/en/bahnhof-services/dienstleistungen/fundbuero.html> 提交遗失报告，然后后台会帮你找，并定期给你发信通知是否找到。
 
