Update 35人身财产安全.md, SUMMARY.md, 人身财产安全受到侵害时的应对.md, 入境、过境、出境受阻时的应对.md, 居住证遗失后的应对.md, 意外受伤-生病时的应对.md, 护照遗失后的应对.md Delete 被盗-抢-骗后的应对.md

--- a/入境、过境、出境受阻时的应对.md
+++ b/入境、过境、出境受阻时的应对.md
@@ -1,1 +1,3 @@
 ^
+* 如果您持有效护照、签证，请向边境检查部门说明情况，询问受阻原因。如果您语言不通，可要求对方提供翻译服务。
+* 如果您的合理要求未得到回应，请与中国使（领）馆联系。领事官员将向有关部门了解情况，并进行必要交涉。能否放行取决于实际情况。如果您受到不公正对待，请注意收集、保存证据，以便日后诉诸法律。
