--- a/居住证遗失后的应对.md
+++ b/居住证遗失后的应对.md
@@ -3,6 +3,8 @@
 1. 首先，立即到当地警察局报警并备案
 2. 立即与当地户籍管理处联系
 * Kreisbüro/Gemeindehaus户籍管理地区地址可在网上查找 (https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma.html)
+> [danger] 注意：该链接待确认
+
 * 带好证件复印件
 ^
 **在国外旅游丢失当地居住证?**
