--- a/居住证遗失后的应对.md
+++ b/居住证遗失后的应对.md
@@ -1,13 +1,13 @@
 ^
-**在瑞士丢失当地居住证？**
+**如果在瑞士境内丢失居住证...**
 1. 首先，立即到当地警察局报警并备案
 2. 立即与当地户籍管理处联系
 * Kreisbüro/Gemeindehaus户籍管理地区地址可在网上查找 (https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma.html)
-> [danger] 注意：该链接待确认
+
 
 * 带好证件复印件
 ^
-**在国外旅游丢失当地居住证?**
+**如果在国外旅游时丢失居住证...**
 1. 首先，立即到当地警察局报警并备案，并保存好报失单
 2. 联系机场海关，进行咨询，并提前准备好：
 * 通报或出示警察局报案证明
