--- a/34居留证的续期.md
+++ b/34居留证的续期.md
@@ -1,26 +1,34 @@
-#### **1.  居留证续期注意事项**
-
 参考：[Verlängerung des Aufenthalts B](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/internationale-kundschaft/verlaengerung_des_aufenthals_b.html)、[Einreise ohne Erwerbstätigkeit für Drittstaatsangehörige](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)、[ETH: Visa and Residence Permit](https://ethz.ch/content/dam/ethz/main/continuing-education/Merkblaetter/Factsheet_Visum_en.pdf)
+^
+#### **1.  何时需要进行居留证续期**
+
+
 一般地，在瑞留学生获得的居留证**有效期为1年**。居留证到期前一个月左右时，人口登记处会向你寄送一封“延期信函”（Verfallsanzeige B，此处B对应居留证类型），要求你办理延期。
 如希望提前办理的，亦可前往人口登记处要求工作人员**现场签发“延期信函**”。
-“延期信函”附有一张需要填写的表格，可以自行填写，亦可以在办理时在工作人员的指导下填写。收到“延期信函”后，须携带信函中要求的材料（一般为：护照、现有居留证、现有的学期注册确认、信函及其附件；以实际收到的“延期信函”为准）到对应的人口登记处办理（无须预约），同时需准备102瑞郎作为办理费用。
+^
+#### **2.  居留证续期所需材料**
+*  “延期信函”附有的一张需要填写的表格
+* 信函中要求的材料（一般为：护照、现有居留证、现有的学期注册确认、信函及其附件；请以实际收到的“延期信函”为准）
+* 办理费用102瑞郎
+* 最近开具的**存款证明**（或不适用于博士），表明银行账户内余额在办理续期时不低于**21000**瑞郎（**不允许使用先前办理签证时使用的存款证明来办理延期**！）。建议在人口登记处办理延期后便着手准备并递交这份存款证明以节约时间。
+
 居住地在市区的，可前往市区任一人口登记处办理（详见[25 住址的申报与注销](25住址的申报与注销.md)）。
 
 ^
-
-在人口登记处办理延期后，移民局会核查办理人的延期资格，为此其可能会向办理人致信，要求其**额外提供材料**。此时，须按照信中要求，在规定时间前递交相应材料。递交方式参见本文“联系移民局/补交材料”部分。例如，根据相关要求，办理延期人员须提供办理期间开具的**最新存款证明**（或不适用于博士），以确保其银行账户内余额此时不低于21000瑞郎（即：**不允许使用先前办理签证时使用的存款证明来办理延期**！）。由于人口登记处并不要求此项，这份存款证明几乎一定会是移民局要求补交的材料（之一）。鉴于移民局对这份材料的需求是可以预测的，我们建议**在人口登记处办理延期后便着手准备并递交这份存款证明**以节约时间。如规定时间前因故无法在规定时间前提供全部或部分材料的，也**必须**向移民局回信说明（参见本文“联系移民局/补交材料”部分），并注明预期的上交时间。
+#### **3.  额外材料的递交/补交**
+在人口登记处办理居留证续期后，移民局可能会向办理人致信，要求其**额外提供材料**。此时，须按照信中要求，在规定时间前递交相应材料。递交方式参见本文末尾“联系移民局/补交材料”部分。如规定时间前因故无法在规定时间前提供全部或部分材料的，也**必须**向移民局回信说明，并注明预期的上交时间。
 
 ^
-
+#### **4.  新居留证的寄送**
 一般，在人口登记处办理后6-8周即可通过挂号信形式收到新的居留证。如恰逢办理高峰的，时间可能会有延长。**注意，须确保邮箱上有本人姓名才能收到信件**！
 
 ^
-
-此外，在原有居留证过期以后，获得新的居留证以前因故需要离开瑞士的（含回国等），或居留证在离开瑞士后返回瑞士前到期的，须前往移民局**办理返程签证（Return Visa**）**以确保可以回到瑞士。该签证为随到随办，无需预约**。建议在办理返程签证前致电移民局以确保符合办理条件。
+#### **5.  尚未获得新居留证时需要出境怎么办**
+在原有居留证过期以后，获得新的居留证以前，因故需要离开瑞士的（含回国等），或居留证在离开瑞士后返回瑞士前到期的，须前往移民局**办理返程签证（Return Visa**）**以确保可以回到瑞士。该签证为随到随办，无需预约**。建议在办理返程签证前致电移民局以确保符合办理条件。
 
 ^
 
-#### **2.  联系移民局/补交材料**
+#### ***联系移民局/补交材料**
 
 前文提到的补交材料可通过两种方式进行：
 
