--- a/防诈反诈.md
+++ b/防诈反诈.md
@@ -1,15 +1,35 @@
 > [warning] **本章仍在编写中：2023年7月1日-8月31日**
 
-#### **1. 一般识别**
+### **1. 在瑞常见诈骗手段的介绍与识别**
+#### **1.1 “天上掉黑锅”类**
+- 诈骗方式：电话诈骗
+- 诈骗团伙：中国台湾、缅甸、柬埔寨等地的诈骗团伙
+- 套路：
 
-#### **2. 关于使领馆来电**
+#### **1.2 “天上掉馅饼”类**
+- 诈骗方式：电话诈骗
+- 诈骗团伙：中国台湾、缅甸、柬埔寨等地的诈骗团伙
+- 套路：
 
-#### **3. 关于国内公检法机构、反诈中心来电**
 
-#### **4. 关于各类快递公司来电**
+#### **1.3 “无故失联”类（针对家长）**
+- 诈骗方式：电话诈骗
+- 诈骗团伙：中国台湾、缅甸、柬埔寨等地的诈骗团伙
+- 套路：
 
-#### **5. 租房相关诈骗**
+#### **1.2 机票相关诈骗**
+- 诈骗方式：“收钱不出票”/“出具虚假客票”
+- 诈骗团伙：非法票代团伙
+- 套路：
 
-#### **6. 机票相关诈骗**
+#### **1.3 街头求助搭讪类**
+- 诈骗方式：街头诈骗
+- 诈骗团伙：欧洲当地的诈骗团伙
+- 套路：
 
-#### **7. 街头搭讪类诈骗**
+#### **1.3 私下换汇相关诈骗**
+- 诈骗方式：电话诈骗
+- 诈骗团伙：中国台湾、缅甸、柬埔寨等地的诈骗团伙
+- 套路：
+
+### **2. 遭遇诈骗后的处理**
