--- a/34居留证的续期.md
+++ b/34居留证的续期.md
@@ -1,39 +1,50 @@
 参考：[Verlängerung des Aufenthalts B](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/internationale-kundschaft/verlaengerung_des_aufenthals_b.html)、[Einreise ohne Erwerbstätigkeit für Drittstaatsangehörige](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)、[ETH: Visa and Residence Permit](https://ethz.ch/content/dam/ethz/main/continuing-education/Merkblaetter/Factsheet_Visum_en.pdf)
+
 ^
+
 #### **1.  何时需要进行居留证续期**
 
+一般地，在瑞留学生获得的居留证**有效期为1年**。居留证到期前一个月左右时，人口登记处会向你寄送一封“延期信函”（Verfallsanzeige Ausweis B，此处的B对应居留证类型），要求你办理延期。
 
-一般地，在瑞留学生获得的居留证**有效期为1年**。居留证到期前一个月左右时，人口登记处会向你寄送一封“延期信函”（Verfallsanzeige B，此处B对应居留证类型），要求你办理延期。
-如希望提前办理的，亦可前往人口登记处要求工作人员**现场签发“延期信函**”。
+如你希望提前办理，亦可前往人口登记办公室要求工作人员**现场签发“延期信函**”。
+
 ^
+
 #### **2.  居留证续期所需材料**
-*  “延期信函”附有的一张需要填写的表格
-* 信函中要求的材料（一般为：护照、现有居留证、现有的学期注册确认、信函及其附件；请以实际收到的“延期信函”为准）
+
+* “延期信函”（同时是一张需要填写的表格）
+* 信函中要求的材料（一般为：护照、现有居留证、下学期的学期注册证明、填写好的延期信函表格；请以实际收到的“延期信函”为准）
 * 办理费用102瑞郎
-* 最近开具的**存款证明**（或不适用于博士），表明银行账户内余额在办理续期时不低于**21000**瑞郎（**不允许使用先前办理签证时使用的存款证明来办理延期**！）。建议在人口登记处办理延期后便着手准备并递交这份存款证明以节约时间。
+* 最近开具的**存款证明**（或不适用于博士），表明银行账户内余额在办理续期时不低于**21000**瑞郎（**不允许使用先前办理签证时使用的存款证明来办理延期**！）
 
 居住地在市区的，可前往市区任一人口登记处办理（详见[25 住址的申报与注销](25住址的申报与注销.md)）。
 
 ^
+
 #### **3.  额外材料的递交/补交**
+
 在人口登记处办理居留证续期后，移民局可能会向办理人致信，要求其**额外提供材料**。此时，须按照信中要求，在规定时间前递交相应材料。递交方式参见本文末尾“联系移民局/补交材料”部分。如规定时间前因故无法在规定时间前提供全部或部分材料的，也**必须**向移民局回信说明，并注明预期的上交时间。
 
 ^
+
 #### **4.  新居留证的寄送**
+
 一般，在人口登记处办理后6-8周即可通过挂号信形式收到新的居留证。如恰逢办理高峰的，时间可能会有延长。**注意，须确保邮箱上有本人姓名才能收到信件**！
 
 ^
+
 #### **5.  尚未获得新居留证时需要出境怎么办**
+
 在原有居留证过期以后，获得新的居留证以前，因故需要离开瑞士的（含回国等），或居留证在离开瑞士后返回瑞士前到期的，须前往移民局**办理返程签证（Return Visa**）**以确保可以回到瑞士。该签证为随到随办，无需预约**。建议在办理返程签证前致电移民局以确保符合办理条件。
 
 ^
 
-#### ***联系移民局/补交材料**
+#### \***联系移民局/补交材料**
 
 前文提到的补交材料可通过两种方式进行：
 
-* 将所需要的文件通过邮件寄给移民局（地址：[Berninastrasse 45, 8090 Zürich](https://goo.gl/maps/CDzxUoomjsara83c7)）
-* 将所需要的文件电子版（扫描版）通过联系表格上传递交给移民局
+* 将所需要的文件以纸质信件形式寄给移民局（地址：[Berninastrasse 45, 8090 Zürich](https://goo.gl/maps/CDzxUoomjsara83c7)）
+* 将所需要的文件电子版（扫描版）通过联系表格上传给移民局
 
 除非移民局特别说明需要原件，否则二者是**完全等效**的。
 
@@ -41,7 +52,7 @@
 
 **移民局网上联系表格**：
 链接：[Kontaktformular Migrationsamt](https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt.html)
-该联系表格还可用于问题咨询等。通过该表格联系移民局，尤其是通过此方式提交材料审批的，移民局都会等审批完成后再回复，其耗时可能较长，因此必要时可拨打电话咨询审批进度，见下。
+该联系表格还可用于问题咨询等。通过该表格联系移民局，尤其是通过此方式提交材料审批的，移民局都会等审批完成后再回复，其耗时可能较长，因此必要时可拨打电话咨询审批进度，见下：
 
 ^
 
