--- a/34居留证的续期.md
+++ b/34居留证的续期.md
@@ -17,7 +17,7 @@
 * 办理费用102瑞郎
 * 最近开具的**存款证明**（或不适用于博士），表明银行账户内余额在办理续期时不低于**21000**瑞郎（**不允许使用先前办理签证时使用的存款证明来办理延期**！）
 
-居住地在市区的，可前往市区任一人口登记处办理（详见[25 住址的申报与注销](25住址的申报与注销.md)）。
+居住地在苏黎世市区的，无需预约，可直接携带齐全材料前往市区任一人口登记办公室办理（地址信息详见[25 住址的申报与注销](25住址的申报与注销.md)）。
 
 ^
 
