--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -18,8 +18,8 @@
 >
 > :-: **未经苏黎世学联授权，禁止任何形式转载**
 
-> [success] 2023年4月29日新生在线答疑会回放[请点击此](https://www.bilibili.com/video/BV18m4y1176R/?share_source=copy_web\&vd_source=802461966f51c0cf1ab48c9114efb719)
+> [success] **2023年4月29日新生在线答疑会回放**[请点击此](https://www.bilibili.com/video/BV18m4y1176R/?share_source=copy_web\&vd_source=802461966f51c0cf1ab48c9114efb719)****
 >
-> 本手册在持续完善更新（到2023年10月15日），如你想参与编辑或有修改建议，请邮件联系 info\@acssz.org
+> **本手册在持续更新完善，如你想参与编辑或有修改建议，请邮件联系 info\@acssz.org**
 
 ^
