--- a/28居留证的办理.md
+++ b/28居留证的办理.md
@@ -1,4 +1,4 @@
-#### **1.  居留证的首次办理**
+#### **居留证的首次办理**
 
 在人口登记处完成首次住址申报后，需要按预约时间（参见[25 住址的申报与注销](25住址的申报与注销.md)）前往苏黎世州移民局（地址：[Berninastrasse 45, 8090 Zürich](https://goo.gl/maps/CDzxUoomjsara83c7)）办理居留证（DE: Aufenthaltsbewilligung; EN: Residence Permit），办理完成后才算正式成为苏黎世的居民。
 
@@ -26,7 +26,6 @@
 其中，居留证背面包含有“ZEMIS Nr.”和“Kant. Referenz”，这两个号码在办理诸多业务时（如：通过Kontakt Formular或电话联系移民局，见后文）都需要提供。
 
 ^
-^
 
 **移民局网上联系表格**：
 链接：[Kontaktformular Migrationsamt](https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt.html)
@@ -36,3 +35,9 @@
 
 **移民局咨询电话**: +41 43 259 88 00（瑞士时间星期一到星期五 08:00-12:00、13:00-16:30可用）
 拨打该电话，有很大概率会提示“所有雇员正忙，请稍后”，此时可耐心等待；如等待较长时间仍未接听的，可尝试挂断并再次拨打，并在再次拨打时切换服务语言（例如先前选择英语，第二次则可选择德语；无需担心语言不通问题，德语和英语岗位上的客服人员都熟练掌握这两种语言）。如仍然无效的，建议等到其下次开始上班时间再次拨打。
+
+^
+
+> [info] 居留证的续期请见“03 生活相关”章[34 居留证的续期](34居留证的续期.md)
+
+^
