--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,16 +1,20 @@
 #### **1. 需要申请签证的人员**
 
 根据瑞士相关法律法规，以下人员赴瑞留学**不需要**办理签证：
-- [欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](<https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html>)公民
-- 澳大利亚/文莱/日本/马来西亚/新加坡/新西兰/英国公民
-- 持有任一申根国家签发的有效申根居留或申根D类签证的非[欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](<https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html>)公民
 
-换言之，**大多数赴瑞求学的中国留学生在首次赴瑞留学前需要提前办理申根D类签证，并凭此入境瑞士**。对于少数符合上述条件而不需要办理签证的留学生，请参考[Immigration to Switzerland - Immigration without a visa](<https://ethz.ch/en/studies/international/after-admission/immigration/without-visa.html>)。
-此外，**如先前因在瑞士就读中学而持有瑞士居留证，而其在中学毕业后大学开学前到期的，可选择向苏黎世州移民局申请办理“境内迁移”（Kantonswechsel）**，具体流程请根据自身实际情况咨询苏黎世州移民局；亦可在居留证到期前回国按正常流程办理签证后再行赴瑞。**对于诸如此类的“冷门”情况，我们始终建议主动咨询移民局，阐明自身实际情况并根据其建议/要求办理相关手续。**
+* [欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html)公民
+* 澳大利亚/文莱/日本/马来西亚/新加坡/新西兰/英国公民
+* 持有任一申根国家签发的有效申根居留或申根D类签证的**非**[欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html)**公民**
+
+换言之，**大多数赴瑞求学的中国留学生在首次赴瑞留学前需要提前办理申根D类签证，并凭此入境瑞士**。对于少数符合上述“不需要办理签证”条件的留学生，请参考[Immigration to Switzerland - Immigration without a visa](https://ethz.ch/en/studies/international/after-admission/immigration/without-visa.html)的指导。
+此外，**如先前因在瑞士就读中学而持有瑞士居留证，而其在中学毕业后大学开学前到期的，可选择向苏黎世州移民局申请办理“境内迁移”（Kantonswechsel**），具体流程请根据自身实际情况咨询苏黎世州移民局；亦可在居留证到期前回国按正常流程办理签证后再行赴瑞。**对于诸如此类的“冷门”情况，我们始终建议主动咨询移民局，阐明自身实际情况并根据其建议/要求办理相关手续**。
 
 ^
-> [warning] *以下内容**仅适用于在中国（北京、上海、广州、香港）办理签证人员**。如在中国、瑞士以外的第三国办理签证，流程和所需材料可能有所不同，请以苏黎世州移民局、瑞士驻当地使领馆公告及校方要求为准。*
+
+> [warning] *以下内容**仅适用于在中国（北京、上海、广州、香港）办理签证人员***。*如在中国、瑞士以外的第三国办理签证，流程和所需材料可能有所不同，请以苏黎世州移民局、瑞士驻当地使领馆公告及校方要求为准*。
+
 ^
+
 #### **2. 申请签证的时间**
 
 对于本科与硕士学生，在收到录取通知书后即可着手准备申请签证所需的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请。理论上，整个审核过程理论需 8-12 周；而根据经验，实际审核时长约为1个月。
@@ -20,9 +24,9 @@
 
 #### **3. 申请材料**
 
-在“申请签证”这件可以一票决定你未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源**，官方信息来源有[苏黎世州移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[瑞士驻华使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)。以下仅为它们的简要梳理，**我们强烈建议直接阅读相关原文并获取信息！**
+在“申请签证”这件可以一票决定你未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源**，官方信息来源有[苏黎世州移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[瑞士驻华使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)。以下仅为对它们的简要梳理，**我们强烈建议直接阅读相关原文并获取信息**！
 
-> [danger] *瑞士的信息公开做得很好，来到瑞士，请学会自己检索搜集整理信息并作出决定。*
+> [danger] *瑞士的信息公开做得很好，来到瑞士，请学会自己检索搜集整理信息并作出决定*。
 
 你的申请材料将经由使领馆转交给苏黎世州移民局，苏黎世州移民局将审核你的签证材料并决定是否发签。最终决定权在苏黎世州移民局手上，使领馆仅负责转交材料并通知贴签。
 
@@ -93,29 +97,34 @@
 
 #### **5. 相关咨询渠道**
 
-##### **1) 参考校方网站 / 向校方邮件咨询（回复速度较快）**
+##### **1) 参考校方网站 / 向校方邮件咨询（回复速度较快**）
 
-- **[ETH International Student Office](<https://ethz.ch/students/en/studies/international-students.html>)**
+* [ETH International Student Office](https://ethz.ch/students/en/studies/international-students.html)
 
-- **[UZH for International Students and Scholars](<https://www.internationals.uzh.ch/en.html>)**
+* [UZH for International Students and Scholars](https://www.internationals.uzh.ch/en.html)
 
 ##### **2) 向递签的使领馆邮件/电话咨询**
-- [瑞士驻华使领馆联系方式汇总](<https://www.eda.admin.ch/countries/china/en/home/representations.html>)
-*点击对应使领馆可查看该馆签证（Visa）相关问题的**咨询邮箱**及**电话热线**（如选择电话咨询，请务必注意其可用时间）*
+
+* [瑞士驻华使领馆联系方式汇总](https://www.eda.admin.ch/countries/china/en/home/representations.html)
+  *点击对应使领馆可查看该馆签证（Visa）相关问题的**咨询邮箱**及**电话热线***（*如选择电话咨询，请务必注意其可用时间*）
 
 ##### **3) 咨询苏黎世州移民局**
-- [苏黎世州移民局联系表格](<https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt-ohne-zhnr.html>)
-- 苏黎世州移民局服务热线（可通过Skype等拨打）：+41 43 259 88 00
-（瑞士时间星期一至星期五 08:00-12:00、13:00-16:30可用）
-*拨打该电话，有很大概率会提示“所有雇员正忙，请稍后”，此时可耐心等待；如等待较长时间仍未接听的，可尝试挂断并再次拨打，并在再次拨打时切换服务语言（例如先前选择英语，第二次则可选择德语；无需担心语言不通问题，德语和英语岗位上的客服人员都熟练掌握这两种语言）。如仍然无效的，建议等到其下次开始上班时间拨打。*
+
+* [苏黎世州移民局联系表格](https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt-ohne-zhnr.html)
+* 苏黎世州移民局服务热线（可通过Skype等拨打）：+41 43 259 88 00
+  （瑞士时间星期一至星期五 08:00-12:00、13:00-16:30可用）
+  *拨打该电话，有很大概率会提示“所有雇员正忙，请稍后”，此时可耐心等待；如等待较长时间仍未接听的，可尝试挂断并再次拨打，并在再次拨打时切换服务语言（例如先前选择英语，第二次则可选择德语；无需担心语言不通问题，德语和英语岗位上的客服人员都熟练掌握这两种语言）。如仍然无效的，建议等到其下次开始上班时间拨打*。
 
 ^
 
 #### **6. 递交签证材料的地点和预约方式**
 
-瑞士在中国设有一个大使馆（北京）和四个总领馆（上海、广州、成都、香港）（瑞士驻成都总领馆领区的签证业务由北京的瑞士驻华大使馆代管），**各使领馆对应领区（签证业务受理范围）和预约链接见[Switzerland and China - Where to apply for a national visa](<https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/where-to-apply-national.html>)。** 
-^
-#### **7. 补交材料**
-> [warning] *该部分内容汇总自群聊，需要额外核实。*
+瑞士在中国设有一个大使馆（北京）和四个总领馆（上海、广州、成都、香港）（瑞士驻成都总领馆领区的签证业务由北京的瑞士驻华大使馆代管），**各使领馆对应领区（签证业务受理范围）和预约链接见**[Switzerland and China - Where to apply for a national visa](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/where-to-apply-national.html)。
 
-当递交的材料不足时，移民局可能会向申请人致信要求补交材料。届时，申请人将收到对应使领馆的通知，要求本人前往并签收该信件。此时，务必按照信中时间要求补交相关材料。如移民局未强调需要原件的，可将相关文件的电子版/扫描版通过前文所述的联系表格补交给移民局；如移民局强调需要原件的，建议向在场的工作人员咨询补交方法。
+^
+
+#### **7. 补交材料**
+
+> [warning] *该部分内容汇总自群聊，需要额外核实*。
+
+当递交的材料不足时，移民局可能会向申请人致信要求补交材料。届时，申请人将收到对应使领馆的通知，要求本人前往并签收该信件。此时，务必按照信中时间要求补交相关材料。如移民局未强调需要原件的，可将相关文件的电子版/扫描版通过前文所述的[联系表格](https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt-ohne-zhnr.html)补交给移民局；如移民局强调需要原件的，建议向在场的工作人员咨询补交方法。
