Update 13赴瑞机票.md, 15新生材料c-o寄存.md, 16 云找房.md

--- a/15新生材料c-o寄存.md
+++ b/15新生材料c-o寄存.md
@@ -1,4 +1,8 @@
-> 本节内容仅适用于ETH的相关流程，UZH不会提前发新生材料
+> [warning] *本节内容仅适用于ETH的相关流程，UZH不会提前发新生材料！*
+
+> [danger] ***本节内容或不再适用，需要额外核实。***
+
+> [warning] *本节内容后期可能调整为“校方于行前发放的材料”，以适应ETH最新的材料发放政策*。
 
 ^
 
