--- a/16 云找房.md
+++ b/16 云找房.md
@@ -1,4 +1,4 @@
-> [success] 本篇贡献：任逍遥，杨晨宇，杨锦涛，张家萌（新生），陈庆瑄（新生），彭雅莹（新生），岳妮（新生）
+> [success] 本篇贡献：任逍遥、杨晨宇、杨锦涛、张家萌（新生）、陈庆瑄（新生）、彭雅莹（新生）、岳妮（新生）
 
 在找房之前，请查看租房避雷贴：[租房避雷贴- 苏黎世留学生论坛](https://forum.acssz.org/d/794-zu-fang-bi-lei-tie)
 
