--- a/13赴瑞机票.md
+++ b/13赴瑞机票.md
@@ -33,9 +33,9 @@
 此外，如有往返城市不同的（比如北京→苏黎世→上海），可在购票界面选择“多程”/“Multi-City”，但如此购买到的机票价格不一定是最优惠的
 另外，由于复杂的市场原因，经常会出现A→B→C的航班比A→B航班还要便宜的现象，但是由于运输合同、行李直挂等原因，我们并不推荐采取这种“弃乘”的方式来节约成本。（曾有旅客因为采取这样的方式搭乘飞机，被航司告上法庭的。因此为了避免带来不必要的麻烦，还是建议大家按实际需要安排路线行程）
 
-#### **1.6 注意机票类别（多票组合vs联程票**）
+#### **1.6 注意机票类别（多票组合vs联程票）**
 
-为了给旅客提供更优惠的票价，不少OTA平台会提供多票组合选项，即将中转行程的前段和后段分别出票，这样开出的机票基本不能实行行李直挂，必须在中转地提取行李并重新办理值机手续（即使前段和后段航班属于一个航司，地勤也有权拒绝；即使地勤明确表示愿意帮助“捞行李”也有一定风险），经非申根、非免签国家转机还需要额外办理过境签证，因此不推荐选择此类客票，即，不建议选择非联程票赴瑞。
+为了给旅客提供更优惠的票价，不少OTA平台会提供多票组合选项，即将中转行程的前段和后段分别出票，这样开出的机票基本不能实行行李直挂，必须在中转地提取行李并重新办理值机手续（即使前段和后段航班属于一个航司，地勤也有权拒绝；即使地勤明确表示愿意帮助“捞行李”也有一定风险），经非申根、非免签国家转机还需要额外办理过境签证，因此不推荐选择此类客票，即，**不建议选择非联程票赴瑞**。
 此外，部分航司（如海南航空HU）开出的联程票也不能实现行李直挂，需要特别注意。
 
 #### **1.7 注意机票的行李额、退改签条款等信息**
@@ -109,7 +109,7 @@
 目前，中国内地→瑞士直航航班包含：
 
 * LX189航班（上海浦东PVG-苏黎世ZRH），[瑞士国际航空](https://www.swiss.com/cn/zh/homepage)承运，每周三、五、日执行，起降时刻11:20-18:50，实际飞行时长约13小时，执飞机型为B77W/A343
-* CA861航班（北京首都PEK-日内瓦GVA），[中国国际航空](https://www.airchina.com.cn/)承运，每周一、四、六 （**7月14日起调整为每周一、四、五、六**） 执行，起降时刻02:25-07:15，实际飞行时长约11小时，执飞机型为A332
+* CA861航班（北京首都PEK-日内瓦GVA），[中国国际航空](https://www.airchina.com.cn/)承运，每周一、四、五、六 执行，起降时刻02:25-07:15，实际飞行时长约11小时，执飞机型为A332
 
 目前，中国内地→瑞士的航线航班没有增加的计划。如有增班的信息，我们会第一时间通告。
 
@@ -130,7 +130,7 @@
 
 目前，中国香港→瑞士直航航班包含：
 
-* CX383航班，[国泰航空](https://www.cathaypacific.com/cx/sc_CN.html)承运，7月1日起调整为每周二、四、六执行，起降时刻23:10-06:30+1，实际飞行时长约13h，执飞机型为A35K
+* CX383航班，[国泰航空](https://www.cathaypacific.com/cx/sc_CN.html)承运，每周二、四、六执行，起降时刻23:10-06:30+1，实际飞行时长约13h，执飞机型为A35K
 * LX139航班，[瑞士国际航空](https://www.swiss.com/cn/zh/homepage)承运，每周一、二、三、五、六、日执行，起降时刻22:25-06:10+1，实际飞行时长约13.5h，执飞机型为A343
 
 亦可以将本项与下面的3项结合起来安排路线，选择经香港前往其他城市，再转机赴瑞，如“西安-香港-法兰克福-苏黎世”“成都-香港-多哈-苏黎世”等。
@@ -149,7 +149,7 @@
 
 其他特点：
 
-* 价格较为参差，与日期、承运航司、航线等关系很大（见下文“常见路线”）
+* 价格较为参差，与日期、承运航司、航线等关系很大
 * 在中转地需要过关，可能需要二次安检；抵达瑞士后不再需要过关
 * 客舱硬件，服务质量较为参差，与承运航司关系很大
 * 受俄乌局势影响，对于同一航线上的中→欧航班，外航航班比国内航司航班时间长
@@ -172,7 +172,7 @@
 * 北京首都PEK/上海浦东PVG-哥本哈根CPH-苏黎世ZRH
   承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[北欧航空SK](https://www.flysas.com/cn-zh/)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
 
-此外，还有达成波兰航空LO的航班经华沙肖邦WAW转机的选择可以考虑，但据反馈该航司在航班取消时操作退款速度极慢。
+此外，还有达成波兰航空LO的航班经华沙肖邦WAW转机的选择可以考虑，但据反馈该路线行李丢失概率较大，且航司在航班取消时操作退款速度极慢。
 
 #### **2.4 经中东转机赴瑞**
 
@@ -208,7 +208,6 @@
 
 * 北京首都PEK/上海浦东PVG/广州白云CAN-伊斯坦布尔IST-苏黎世ZRH
   承运航司：土耳其航空TK
-  单程价格：约4-6k
   优点：
   \-- 购买联程票的，原则上不需要申请过境签证（建议额外核实）
   \-- 价格相对优惠
@@ -219,7 +218,6 @@
 * 北京首都PEK-伦敦希思罗LHR-苏黎世ZRH
   参考：[《赴华|赴北美：英国转机指南（我在英国转机要签证吗?)》](https://piao.tips/d05985a3eb/)
   承运航司：英国航空BA、维珍航空VS、中国国际航空CA、中国南方航空CZ等
-  单程价格：7-12k
   优点：
   \-- 持有申根D类签证的，或是持有申根居留卡的，原则上不需要申请过境签证
   \-- 出境城市选择较多
@@ -244,7 +242,7 @@
 
 * 国际航线航班信息：[知乎《国际航班汇总》专栏](https://www.zhihu.com/column/c_1286552806351065088)（由本人，即[知乎@ZBAA-APP](https://www.zhihu.com/people/zbaa-app/)汇总整理，欢迎关注）
 * 航班不正常保障及旅客权益：[欧盟对EC261的介绍（英文版）](https://europa.eu/youreurope/citizens/travel/passenger-rights/air/index_en.htm)、[航空博主SiriusDEUU对EC261的介绍](https://mp.weixin.qq.com/s/17NE6r18HiANbfHoRcEjPA)
-* 内地往来香港航班信息：[知乎《港澳台地区航班及相关信息》专栏](https://www.zhihu.com/column/c_1593393411708715010)
+* 内地往来香港航班信息、港澳台国际航班信息：[知乎《港澳台地区航班及相关信息》专栏](https://www.zhihu.com/column/c_1593393411708715010)
 
 及文中其他外链。
 
