--- a/10申请签证.md
+++ b/10申请签证.md
@@ -28,7 +28,7 @@
 
 > [danger] *瑞士的信息公开做得很好，来到瑞士，请学会自己检索搜集整理信息并作出决定*。
 
-你的申请材料将经由使领馆转交给苏黎世州移民局，苏黎世州移民局将审核你的签证材料并决定是否发签。最终决定权在苏黎世州移民局手上，使领馆仅负责转交材料并通知贴签。
+你的申请材料将经由使领馆转交给苏黎世州移民局，苏黎世州移民局将审核你的签证材料并决定是否发签。最终决定权在苏黎世州移民局手上，使领馆仅负责转交材料并在移民局批准后通知你贴签。
 
 > 苏黎世州移民局对于签证申请的相关政策法规可见（德语）
 >
@@ -90,7 +90,7 @@
 #### **4. 注意事项**
 
 * 注意**不要用旅游签证进入瑞士**
-* 上述学校官网要求的申请材料仅针对苏黎世州的高等院校
+* 上述学校官网建议的申请材料仅针对苏黎世州的高等院校
 * 存款必须存在**自己的名下**，不可以存在父母名下
 
 ^
