--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -21,7 +21,7 @@
 > [success] 2023年4月29日新生在线答疑会回放[请点击此](https://www.bilibili.com/video/BV18m4y1176R/?share_source=copy_web\&vd_source=802461966f51c0cf1ab48c9114efb719)
 >
 > **手册动态更新，欢迎持续关注**
-> 如有任何修改意见/建议，或是想要参与编辑的，欢迎通过邮件联系我们
+> 如你有任何修改意见/建议，或想要参与编辑，欢迎通过邮件联系我们
 > 邮箱地址：<info@acssz.org>
 
 ^
