--- a/防诈反诈.md
+++ b/防诈反诈.md
@@ -1,35 +1,44 @@
 > [warning] **本章仍在编写中：2023年7月1日-8月31日**
 
+> [warning] *如你在瑞士经历过诈骗的，欢迎将相关经历通过info@acssz.org分享给我们，以帮助更多同学识破诈骗分子的阴谋。*
+
 ### **1. 在瑞常见诈骗手段的介绍与识别**
 #### **1.1 “天上掉黑锅”类**
 - 诈骗方式：电话诈骗
 - 诈骗团伙：中国台湾、缅甸、柬埔寨等地的诈骗团伙
-- 套路：
+- 案例一：张三同学接到+86 10 96110来电，对方自称“广州反诈中心”，在向张三科普了一些反诈知识和后，称张三名下有一张在北京大兴国际机场的中国移动营业厅办理的电话卡涉嫌违法犯罪。在张三否认办理过该张电话卡后，“广州反诈中心”表示张三的身份被不法分子冒用，要求张三报案，并替张三将电话转接到“北京市公安局大兴分局刑侦支队”。期间，张三对“广州反诈中心”使用+86 10的区号提出质疑，“广州反诈中心”表示这是由于向境外呼叫而使用的统一号码，张三遂相信之。电话转接后，一位“王警官”替张三通过Skype
+- 案例二：李四同学接到
+- 套路总结：
+- 识别：
 
 #### **1.2 “天上掉馅饼”类**
 - 诈骗方式：电话诈骗
 - 诈骗团伙：中国台湾、缅甸、柬埔寨等地的诈骗团伙
 - 套路：
 
-
 #### **1.3 “无故失联”类（针对家长）**
 - 诈骗方式：电话诈骗
 - 诈骗团伙：中国台湾、缅甸、柬埔寨等地的诈骗团伙
 - 套路：
 
-#### **1.2 机票相关诈骗**
+#### **1.4 机票相关诈骗**
 - 诈骗方式：“收钱不出票”/“出具虚假客票”
 - 诈骗团伙：非法票代团伙
 - 套路：
 
-#### **1.3 街头求助搭讪类**
-- 诈骗方式：街头诈骗
+#### **1.5 街头求助搭讪类**
+- 诈骗方式：线下诈骗
 - 诈骗团伙：欧洲当地的诈骗团伙
 - 套路：
 
-#### **1.3 私下换汇相关诈骗**
-- 诈骗方式：电话诈骗
-- 诈骗团伙：中国台湾、缅甸、柬埔寨等地的诈骗团伙
+#### **1.6 私下换汇相关诈骗**
+- 诈骗方式：线下诈骗
+- 诈骗团伙：欧洲当地的华人诈骗团伙
+- 套路：
+
+#### **1.7 租房相关诈骗**
+- 诈骗方式：邮件诈骗
+- 诈骗团伙：欧洲当地的诈骗团伙
 - 套路：
 
 ### **2. 遭遇诈骗后的处理**
