Update .topwrite/assets/1689117820062.png, .topwrite/assets/1689119166945.png, .topwrite/assets/image_1689117786890.png, 00欢迎页.md, 防诈反诈.md

--- a/防诈反诈.md
+++ b/防诈反诈.md
@@ -3,20 +3,34 @@
 > [warning] *如你在瑞士经历过诈骗的，欢迎将相关经历通过info@acssz.org分享给我们，以帮助更多同学识破诈骗分子的阴谋。*
 
 ### **1. 在瑞常见诈骗手段的介绍与识别**
-#### **1.1 “天上掉黑锅”类**
+#### **1.1 “天上掉黑锅”类 / “无辜失联”类**
 - 诈骗方式：电话诈骗
 - 诈骗团伙：中国台湾、缅甸、柬埔寨等地的诈骗团伙
-- 案例一：张三同学接到+86 10 96110来电，对方自称“广州反诈中心”，在向张三科普了一些反诈知识和后，称张三名下有一张在北京大兴国际机场的中国移动营业厅办理的电话卡涉嫌违法犯罪。在张三否认办理过该张电话卡后，“广州反诈中心”表示张三的身份被不法分子冒用，要求张三报案，并替张三将电话转接到“北京市公安局大兴分局刑侦支队”。期间，张三对“广州反诈中心”使用+86 10的区号提出质疑，“广州反诈中心”表示这是由于向境外呼叫而使用的统一号码，张三遂相信之。电话转接后，一位“王警官”替张三通过Skype
-- 案例二：李四同学接到
+- 案例：
+【第一阶段】张三同学接到+86 10 96110来电，对方自称“广州反诈中心”，在向张三科普了一些反诈知识和后，称张三名下有一张在北京大兴国际机场的中国移动营业厅办理的电话卡涉嫌违法犯罪。在张三否认办理过该张电话卡后，“广州反诈中心”表示张三的身份被不法分子冒用，要求张三报案，并替张三将电话转接到“北京市公安局大兴分局刑侦支队”。期间，张三对“广州反诈中心”使用+86 10的区号提出质疑，“广州反诈中心”表示这是由于向境外呼叫而使用的统一号码，张三遂相信之。
+【第二阶段】电话转接后，一位“王警官”为张三通过Skype进行了笔录，并出具了《报案事件接报回执单》。![](.topwrite/assets/1689117820062.png)
+期间，张三对公安部门使用Skype软件办案提出质疑，“王警官”表示该举措是为了方便海外群众配合调查。随后，“王警官”提出要帮助张三查询一下张三是否有其他身份被冒用的情况，要求张三提供身份证号，张三接受，“王警官”便呼叫“总部”查询。后“总部”回话称有一张张三名下的银行卡涉嫌巨额洗钱，要求张三立刻配合调查。
+【第三阶段】
+此时，“王警官”的上级“冯队长”进入对话，称自己接到重大案件的警报，询问“王警官”情况，“王警官”便向“冯队长”汇报了关于“张三银行卡涉案”的情况，“冯队长“随即表示案件由他接管，开始审问张三，并要求张三签署《保密协议条款同意书》，称该案件属于”国家二级保密案件“。![](.topwrite/assets/1689119166945.png)
+张三签署《同意书》后，”冯队长“给张三展示了这起”洗钱案“的”主要涉案嫌疑人名单“请张三指认，张三表示不认识其中的任何一个人。”冯队长“表示，所有”涉案嫌疑人“均指认，张三通过向其出售银行卡获利，目前没有任何对张三有利的证据，并给予张三一天的时间，要求其仔细回想与”名单“中的”嫌疑人“是否有过交集并写一份《自白书》。期间，张三按“冯队长”要求，所有行为受其监听监视。
+【第四阶段】
+第三天，在张三否认后，”冯队长“并向”负责检察官“对话申请”境外资金清查“。”冯队长“将电话转给”检察官“，同时向“检察官”提交了张三的《自白书》。”检察官“和张三简要了解情况，随后便将”冯队长“召进电话，表示会给”冯队长“下一份公文，让”冯警官“依公文处理。”冯队长“收到公文后，告知张三该公文是一张对张三的《刑事拘捕令》并向张三展示之。”冯队长“表示极为惊诧，但又表示其感觉张三也是被害人，因此愿意帮助张三通过暂时压住这份《拘捕令》不发的方式与”检察官”周旋。第四天，”冯队长“表示依然在想办法帮助张三。
+【第五阶段】
+张三感觉事情反常，便开始查阅相关资料，在致电真正的北京市公安局大兴分局后确定是遭遇了电信诈骗，幸无财产损失。
+【第二个平行时空的第五阶段】
+// TO BE ADDED
+【第三个平行时空的第五阶段】
+// TO BE ADDED
+【第四个平行时空的第五阶段】
+// TO BE ADDED
+- 案例变体：
+// TO BE ADDED
 - 套路总结：
+// TO BE ADDED
 - 识别：
+// TO BE ADDED
 
 #### **1.2 “天上掉馅饼”类**
-- 诈骗方式：电话诈骗
-- 诈骗团伙：中国台湾、缅甸、柬埔寨等地的诈骗团伙
-- 套路：
-
-#### **1.3 “无故失联”类（针对家长）**
 - 诈骗方式：电话诈骗
 - 诈骗团伙：中国台湾、缅甸、柬埔寨等地的诈骗团伙
 - 套路：
