--- a/10申请签证.md
+++ b/10申请签证.md
@@ -4,7 +4,7 @@
 
 * [欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html)公民
 * 澳大利亚/文莱/日本/马来西亚/新加坡/新西兰/英国公民
-* 持有任一申根国家签发的有效申根居留或申根D类签证的**非**[欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html)**公民**
+* 持有任一申根国家签发的有效申根居留或申根D类签证的**非[欧盟（EU）/ 欧洲自由贸易协会（EFTA）国家](https://www.sem.admin.ch/sem/en/home/themen/fza_schweiz-eu-efta/eu-efta_buerger_schweiz.html)公民**
 
 换言之，**大多数赴瑞求学的中国留学生在首次赴瑞留学前需要提前办理申根D类签证，并凭此入境瑞士**。对于少数符合上述“不需要办理签证”条件的留学生，请参考[Immigration to Switzerland - Immigration without a visa](https://ethz.ch/en/studies/international/after-admission/immigration/without-visa.html)的指导。
 此外，**如先前因在瑞士就读中学而持有瑞士居留证，而其在中学毕业后大学开学前到期的，可选择向苏黎世州移民局申请办理“境内迁移”（Kantonswechsel）**，具体流程请根据自身实际情况咨询苏黎世州移民局；亦可在居留证到期前回国按正常流程办理签证后再行赴瑞。**对于诸如此类的“冷门”情况，我们始终建议主动咨询移民局，阐明自身实际情况并根据其建议/要求办理相关手续**。
@@ -69,9 +69,7 @@
 >
 > 详情可见：<https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>
 
-* 银行存款（**请存入苏黎世州移民局**[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)**中**，2023年5月名单包含：建行、工行和中行。苏黎世州移民局没有存款冻结要求，但各使领馆有自己的存款冻结要求。每个使领馆的冻结要求不一样，而且每年都在变。因此，在换汇冻结前请先邮件咨询你递签领区的使领馆，并分享/关注新生群内相关消息）
-
-> 苏黎世州移民局接受银行清单 <https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de>
+* 银行存款（**请存入苏黎世州移民局[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)中**，2023年5月名单包含：建行、工行和中行。苏黎世州移民局没有存款冻结要求，但各使领馆有自己的存款冻结要求。每个使领馆的冻结要求不一样，而且每年都在变。因此，在换汇冻结前请先邮件咨询你递签领区的使领馆，并分享/关注新生群内相关消息）
 
 ^
 
@@ -89,7 +87,7 @@
 
 #### **4. 注意事项**
 
-* 注意**不要用旅游签证进入瑞士**
+* **不要用旅游签证进入瑞士**
 * 上述学校官网建议的申请材料仅针对苏黎世州的高等院校
 * 存款必须存在**自己的名下**，不可以存在父母名下
 
@@ -119,7 +117,7 @@
 
 #### **6. 递交签证材料的地点和预约方式**
 
-瑞士在中国设有一个大使馆（北京）和四个总领馆（上海、广州、成都、香港）（瑞士驻成都总领馆领区的签证业务由北京的瑞士驻华大使馆代管），**各使领馆对应领区（签证业务受理范围）和预约链接见**[Switzerland and China - Where to apply for a national visa](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/where-to-apply-national.html)。
+瑞士在中国设有一个大使馆（北京）和四个总领馆（上海、广州、成都、香港）（瑞士驻成都总领馆领区的签证业务由北京的瑞士驻华大使馆代管），**各使领馆对应领区（签证业务受理范围）和预约链接见[Switzerland and China - Where to apply for a national visa](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/where-to-apply-national.html)**。
 
 ^
 
