Update 16 云找房.md, 24找房租房.md

--- a/16 云找房.md
+++ b/16 云找房.md
@@ -11,7 +11,7 @@
 * **经典骗钱套路**是在你还没到瑞士前，请你转所谓的定金（~~Security deposit~~）给他，收到定金后他为你预订保留房间和合同。事实上，瑞士的正规租房程序**没有“定金”的说法**，不需要提前交定金！**要求提前交钱的都不要信**！类似这种可疑情况都不要转账！
 * **瑞士正规租房流程**是：
 
-1. **先签合同**（该合同一般为**德语**，因为德语合同在瑞士才具备法律效力。如果是英语合同，请一定要小心谨慎，很有可能是骗子）
+1. **先签合同**（该合同一般为**德语**，因为德语合同在瑞士才具备法律效力。如果是英语合同，请一定要小心谨慎，很有可能是骗子），签完合同后安排看房，房东和你一起完成《房间现状记录表》，完成记录后房东将钥匙交给你。**在拿到钥匙打开房门那一刻之前，不要交任何的钱**（企业、中介及合作社的房源，如Livit，Intermezzo，WOKO，JUWO，WFSS房源等可酌情在拿到钥匙前交部分费用如押金，私人房东一定不要提前交钱）
 2. 一般情况下，在签完合同后，房产公司会为你开设一个在你名下的**银行押金账户**，开设该账户需要你签字授权，你交的押金将存放在该账户。**你的押金不应该放在房东私人或房产公司的账户里**。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明
 3. 或者，在签完合同后，你也有可能是去签署一份**押金保险**（Mieterkautionsversicherung）并缴纳押金
 4. 你的**租金应该对公转账**，通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产中介公司或私人产权所有者）账户
